[gd_scene load_steps=3 format=3 uid="uid://b3xkr34ohheb0"]

[ext_resource type="Texture2D" uid="uid://df4dvj5gw5qcx" path="res://assets/ui_assets/paladin_icons/Icon13.png" id="1_4sggb"]
[ext_resource type="Script" path="res://Scenes/skill_button.gd" id="2_l2s1c"]

[node name="SkillButton" type="TextureButton"]
z_index = 6
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.32, 3.32)
toggle_mode = true
texture_normal = ExtResource("1_4sggb")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_l2s1c")

[node name="SkillLevel" type="Label" parent="."]
z_index = 6
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -15.9518
offset_bottom = -1.95181
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0.114897, 0.114897, 0.114897, 1)
theme_override_font_sizes/font_size = 10
text = "0/1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="SkillBranch" type="Line2D" parent="."]
top_level = true
z_index = 10
closed = true
width = 5.0
default_color = Color(0.435192, 0.435192, 0.435192, 1)

[node name="SkillBranch2" type="Line2D" parent="."]
top_level = true
z_index = 10
width = 5.0
default_color = Color(0.435294, 0.435294, 0.435294, 1)

[connection signal="pressed" from="." to="." method="_on_pressed"]
